--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -10,77 +10,65 @@
 <body>
     <div class="navbar">
         <button class="left-title">Ecommerce<button>
-        <button class="cart-shopping"><img src="img/cart1.png" alt="cart" class="cart-icon"></button>
+        <button class="cart-shopping" onclick="showCart();"><img src="img/cart1.png" alt="cart" class="cart-icon"></button>
+        <div class="number-products" id="pd">0</div>
     </div>
     <div class="container">
         <div class="title"><h2>Shop Products</h2></div>
         <div class="grid">
-            <div class="img-continer">
+            <div class="img-continer" id="product-1">
                 <img src="img/product1.jpg" alt="p1" class="product-img">
                 <p class="name">AERPREADY SHIRT</p>
                 <p class="price">$25</p>
-                <div class="button-add"><img src="img/add.png" alt=""></div>
+                <div class="button-add" onclick="addToCart(1);"><img src="img/add.png" alt=""></div>
             </div>
-            <div class="img-continer">
+            <div class="img-continer" id="product-2">
                 <img src="img/product2.jpg" alt="p1" class="product-img">
                 <p class="name">WIRELESS EARBUDS</p>
                 <p class="price">$100</p>
-                <div class="button-add"><img src="img/add.png" alt=""></div>
+                <div class="button-add" onclick="addToCart(2);"><img src="img/add.png" alt=""></div>
             </div>
             <div class="img-continer">
                 <img src="img/product3.jpg" alt="p1" class="product-img">
                 <p class="name">HOODED PARKA</p>
                 <p class="price">$45</p>
-                <div class="button-add"><img src="img/add.png" alt=""></div>
+                <div class="button-add" onclick="addToCart(3);"><img src="img/add.png" alt=""></div>
             </div>
             <div class="img-continer">
                 <img src="img/product4.jpg" alt="p1" class="product-img">
                 <p class="name">STRAW METAL BOTTLE</p>
                 <p class="price">$24.04</p>
-                <div class="button-add"><img src="img/add.png" alt=""></div>
+                <div class="button-add" onclick="addToCart(4);"><img src="img/add.png" alt=""></div>
             </div>
             <div class="img-continer">
                 <img src="img/product5.jpg" alt="p1" class="product-img">
                 <p class="name">METAL SUNGLASSES</p>
                 <p class="price">$50</p>
-                <div class="button-add"><img src="img/add.png" alt=""></div>
+                <div class="button-add" onclick="addToCart(5);"><img src="img/add.png" alt=""></div>
             </div>
             <div class="img-continer">
                 <img src="img/product6.jpg" alt="p1" class="product-img">
                 <p class="name">BACK HAT</p>
                 <p class="price">$50</p>
-                <div class="button-add"><img src="img/add.png" alt=""></div>
+                <div class="button-add" onclick="addToCart(6);"><img src="img/add.png" alt=""></div>
             </div>
             <div class="img-continer">
                 <img src="img/product7.jpg" alt="p1" class="product-img">
                 <p class="name">BACK PACK</p>
                 <p class="price">$70</p>
-                <div class="button-add"><img src="img/add.png" alt=""></div>
+                <div class="button-add" onclick="addToCart(7);"><img src="img/add.png" alt=""></div>
             </div>
             <div class="img-continer">
                 <img src="img/product8.jpg" alt="p1" class="product-img">
                 <p class="name">ULTRABOOST 22 </p>
                 <p class="price">$45</p>
-                <div class="button-add"><img src="img/add.png" alt=""></div>
+                <div class="button-add" onclick="addToCart(8);"><img src="img/add.png" alt=""></div>
             </div>
         </div>
     </div>
-    <div class="cart buy">
+    <div class="cart">
+        <button class="previous" onclick="hideCart();"><img src="img/Screenshot 2023-06-21 225736.png" alt="" class="previous-img"></button>
         <div class="cart-title"><h2>Your Cart</h2></div>
-        <div class="items">
-            <div>
-                <img src="img/product8.jpg" alt="p1" class="img-item">
-            </div>
-            <div class="description">
-                <p class="item-title">ULTRABOOST 22</p>
-                <p class="item-price">$45</p>
-                <input type="number" name="number" value="number" id="number" min="1">
-            </div>
-            <button class="delete"><img src="img/bxs-trash-alt.png" alt="" class="delete-item"></button>
-        </div>
-        <div class="total"></div>
-        <button class="calculate">Buy Now</button>
-
     </div>
     <script src="shopping-cart.js"></script>
 </body>
