this is my second update .juste still to calculate the total and effect the buy

--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -67,8 +67,13 @@
         </div>
     </div>
     <div class="cart">
-        <button class="previous" onclick="hideCart();"><img src="img/Screenshot 2023-06-21 225736.png" alt="" class="previous-img"></button>
-        <div class="cart-title"><h2>Your Cart</h2></div>
+        <div class="cart-items">
+            <button class="previous" onclick="hideCart();"><img src="img/Screenshot 2023-06-21 225736.png" alt="" class="previous-img"></button>
+            <div class="cart-title"><h2>Your Cart</h2></div>
+            
+        </div>
+        <div class="total">0</div>
+        <button class="calculate">Buy Now</button>
     </div>
     <script src="shopping-cart.js"></script>
 </body>
