--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -73,7 +73,7 @@
             
         </div>
         <div class="total">0</div>
-        <button class="calculate">Buy Now</button>
+        <button class="calculate" onclick="buyProducts();">Buy Now</button>
     </div>
     <script src="shopping-cart.js"></script>
 </body>
